spade-tests/src/snapshots/spade_tests__ast_lowering__const_generic_is_not_allowed_in_impl_trait.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct X {}
trait T<#uint A> {}
impl T<{1+2}> for X {}


error: Implemented traits cannot have const generics in their type
  ┌─ testinput:3:9
  │
3 │ impl T<{1+2}> for X {}
  │         ^^^ Const generic in implemented trait
