spade-tests/src/snapshots/spade_tests__ast_lowering__const_generic_is_not_allowed_in_struct_port_definition.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct port X {
    x: int<{1+2}>
}


error: Struct members cannot have const generics in their type
  ┌─ testinput:2:13
  │
2 │     x: int<{1+2}>
  │             ^^^ Const generic in struct member
