spade-tests/src/snapshots/spade_tests__ast_lowering__duplicate_item_names.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Multiple items with the same name
  ┌─ testinput:4:4
  │  
1 │ ╭ fn a() -> bool {
2 │ │     true
3 │ │ }
  │ ╰─' Previous definition here
4 │   fn a() -> bool {
  │      ^ a is defined multiple times


