spade-tests/src/snapshots/spade_tests__ast_lowering__duplicate_item_names6.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Multiple definitions of a
  ┌─ testinput:1:4
  │
1 │ fn a() -> bool {
  │    ^ Multiple items named a
  ·
5 │ use x::b as a;
  │     ---- Previous definition here


